--- a/portfolie.html
+++ b/portfolie.html
@@ -13,6 +13,7 @@
     <img src="bark.jfif" alt="">
 <section id="mainTextBox">
     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis doloribus tempore totam quia dicta aliquam delectus cupiditate ea, magnam quaerat perspiciatis accusamus voluptate unde amet quasi, hic labore atque laudantium.
+    badda bing badda boom
 </section>
 </body>
 
