fiksede baggrund plus satte flere kasser ind plus placeholder img

--- a/portfolie.html
+++ b/portfolie.html
@@ -10,10 +10,17 @@
 </head>
 
 <body id="body">
-    <img src="bark.jfif" alt="">
-<section id="mainTextBox">
+<section id="Velkommen">
+    Velkommen
+</section>
+<section id="tekstbox">
     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis doloribus tempore totam quia dicta aliquam delectus cupiditate ea, magnam quaerat perspiciatis accusamus voluptate unde amet quasi, hic labore atque laudantium.
     badda bing badda boom
+
+    </section>
+<section id="tekstbox">
+    badda bing badda boom
+
 </section>
 </body>
 
