var nødt til at fjerne opacity da det gjorde billede gennemsigtigt
vil nok fikse senere

--- a/portfolie.html
+++ b/portfolie.html
@@ -14,6 +14,7 @@
     Velkommen
 </section>
 <section id="tekstbox">
+    <img src="images/the stare.PNG" alt="placeholder" id="billede1">
     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis doloribus tempore totam quia dicta aliquam delectus cupiditate ea, magnam quaerat perspiciatis accusamus voluptate unde amet quasi, hic labore atque laudantium.
     badda bing badda boom
 
