satte billeder ind samt logo til mine projekter
links bliver det næste

--- a/portfolie.html
+++ b/portfolie.html
@@ -10,19 +10,31 @@
 </head>
 
 <body id="body">
-<section id="Velkommen">
+<div id="Overskrifter">
     Velkommen
-</section>
+
+    </div>
 <section id="tekstbox">
-    <img src="images/the stare.PNG" alt="placeholder" id="billede1">
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis doloribus tempore totam quia dicta aliquam delectus cupiditate ea, magnam quaerat perspiciatis accusamus voluptate unde amet quasi, hic labore atque laudantium.
-    badda bing badda boom
+    <div id="Hvem">Hvem?</div>
+    <img src="images/Anders+hund.jpg" alt="Anders(hoejre)" id="Anders">
+    Anders Stensgård Beck (højre)
 
     </section>
-<section id="tekstbox">
-    badda bing badda boom
+<div id="Overskrifter">Projekter
 
-</section>
+    </div>
+<section id="tekstbox">
+        <img src="images/NehmapIcon.png" alt="" id="NehmapIcon">
+    </section>
+
+<section id="tekstbox">
+        <img src="images/TangoIcon.png" alt="TangoIcon" id="TangoIcon">
+    </section>
+
+<section id="tekstbox">
+        <img src="images/ZumbaIcon.png" alt="ZumbaIcon" id="ZumbaIcon">
+    </section>
+
 </body>
 
 </html>
