Links virker POGGERS
kikkede på koden fra spacekitty

--- a/portfolie.html
+++ b/portfolie.html
@@ -24,15 +24,21 @@
 
     </div>
 <section id="tekstbox">
+    <a target="_blank" href="http://abeck.one/Nehmap/">
         <img src="images/NehmapIcon.png" alt="" id="NehmapIcon">
+        </a>
     </section>
 
 <section id="tekstbox">
+    <a target="_blank" href="http://abeck.one/Tangoterapi%232/">
         <img src="images/TangoIcon.png" alt="TangoIcon" id="TangoIcon">
+        </a>
     </section>
 
 <section id="tekstbox">
+    <a target="_blank" href="http://abeck.one/Roomba-Zumba/">
         <img src="images/ZumbaIcon.png" alt="ZumbaIcon" id="ZumbaIcon">
+        </a>
     </section>
 
 </body>
