har fået lavet mit media query ordenligt for en gang skyld plus resten
jeg håber det virker ordenligt

--- a/portfolie.html
+++ b/portfolie.html
@@ -10,37 +10,51 @@
 </head>
 
 <body id="body">
-<div id="Overskrifter">
-    Velkommen
-
+    <div id="Overskrifter"> Velkommen
     </div>
-<section id="tekstbox">
-    <div id="Hvem">Hvem?</div>
-    <img src="images/Anders+hund.jpg" alt="Anders(hoejre)" id="Anders">
-    Anders Stensgård Beck (højre)
 
+    <section id="tekstbox">
+        <div id="Hvem">Hvem?
+        </div>
+            <img src="images/Anders+hund.jpg" alt="Anders(hoejre)" id="Anders">
+            <div>Anders Stensgård Beck (højre) er i øjeblikket igang med at forbedre sig selv da han er igang med hans uddannelse på Zealand ervhersakademi som multimediedesigner.
+                Anders er selvudnævnt kreativ og kan også godt lide den kreative process der indgår i udviklingen og implementeringen af en ide.
+                Der går ikke lang tid før Anders finder på nye koncepter og ideer der skal testes for der er altid et eller andet der skal laves eller optimeres.
+                Det kreative sind der til tider er absurd er det vigtigeste personlighedstræk som Anders besidder da det netop giver ham evnen til at komme på anderledes måder at løse problemer på.               
+                Anders er vant til ansvar da han allerede har prøvet at være i en position hvor han skal kunne holde overblik over en process samt holde moral oppe.
+            </div>
     </section>
-<div id="Overskrifter">Projekter
 
+    <div id="Overskrifter">Hvad?
     </div>
-<section id="tekstbox">
-    <a target="_blank" href="http://abeck.one/Nehmap/">
-        <img src="images/NehmapIcon.png" alt="" id="NehmapIcon">
+
+    <section id="tekstbox">
+        <a target="_blank" href="http://abeck.one/Nehmap/">
+            <img src="images/NehmapIcon.png" alt="NehmapIcon" id="NehmapIcon">
         </a>
     </section>
 
-<section id="tekstbox">
-    <a target="_blank" href="http://abeck.one/Tangoterapi%232/">
-        <img src="images/TangoIcon.png" alt="TangoIcon" id="TangoIcon">
+    <section id="tekstbox">
+        <a target="_blank" href="http://abeck.one/Tangoterapi%232/">
+            <img src="images/TangoIcon.png" alt="TangoIcon" id="TangoIcon">
         </a>
     </section>
 
-<section id="tekstbox">
-    <a target="_blank" href="http://abeck.one/Roomba-Zumba/">
-        <img src="images/ZumbaIcon.png" alt="ZumbaIcon" id="ZumbaIcon">
+    <section id="tekstbox">
+        <a target="_blank" href="http://abeck.one/Roomba-Zumba/">
+            <img src="images/ZumbaIcon.png" alt="ZumbaIcon" id="ZumbaIcon">
         </a>
     </section>
 
 </body>
-
+<footer>
+    <section id="Overskrifter">
+        Hvor?
+        <div id="Hvor">
+            Email: Anders@beckville.dk
+            tlf: 60457474
+        </div>
+    
+    </section>
+</footer>
 </html>
