fik valideret HTML
kom ved et uheld til at style id tags og ikke class tags

--- a/portfolie.html
+++ b/portfolie.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="portfolie.css">
 </head>
 
-<body id="body">
-    <div id="Overskrifter"> Velkommen
+<body class="body">
+    <div class="Overskrifter"> Velkommen
     </div>
 
-    <section id="tekstbox">
-        <div id="Hvem">Hvem?
+    <section class="tekstbox">
+        <div class="Hvem">Hvem?
         </div>
-            <img src="images/Anders+hund.jpg" alt="Anders(hoejre)" id="Anders">
+            <img src="images/Anders+hund.jpg" alt="Anders(hoejre)" class="Anders">
             <div>Anders Stensgård Beck (højre) er i øjeblikket igang med at forbedre sig selv da han er igang med hans uddannelse på Zealand ervhersakademi som multimediedesigner.
                 Anders er selvudnævnt kreativ og kan også godt lide den kreative process der indgår i udviklingen og implementeringen af en ide.
                 Der går ikke lang tid før Anders finder på nye koncepter og ideer der skal testes for der er altid et eller andet der skal laves eller optimeres.
@@ -25,36 +25,38 @@
             </div>
     </section>
 
-    <div id="Overskrifter">Hvad?
+    <div class="Overskrifter">Hvad?
     </div>
 
-    <section id="tekstbox">
+    <section class="tekstbox">
         <a target="_blank" href="http://abeck.one/Nehmap/">
-            <img src="images/NehmapIcon.png" alt="NehmapIcon" id="NehmapIcon">
+            <img src="images/NehmapIcon.png" alt="NehmapIcon" class="NehmapIcon">
         </a>
     </section>
 
-    <section id="tekstbox">
+    <section class="tekstbox">
         <a target="_blank" href="http://abeck.one/Tangoterapi%232/">
-            <img src="images/TangoIcon.png" alt="TangoIcon" id="TangoIcon">
+            <img src="images/TangoIcon.png" alt="TangoIcon" class="TangoIcon">
         </a>
     </section>
 
-    <section id="tekstbox">
+    <section class="tekstbox">
         <a target="_blank" href="http://abeck.one/Roomba-Zumba/">
-            <img src="images/ZumbaIcon.png" alt="ZumbaIcon" id="ZumbaIcon">
+            <img src="images/ZumbaIcon.png" alt="ZumbaIcon" class="ZumbaIcon">
         </a>
     </section>
 
+    <footer>
+        <section class="Overskrifter">
+            Hvor?
+            <div class="Hvor">
+                Email: Anders@beckville.dk
+                tlf: 60457474
+            </div>
+        
+        </section>
+    </footer>
 </body>
-<footer>
-    <section id="Overskrifter">
-        Hvor?
-        <div id="Hvor">
-            Email: Anders@beckville.dk
-            tlf: 60457474
-        </div>
-    
-    </section>
-</footer>
+
+
 </html>
