Formatering af min "Hvem" sektion
lavede ændringer i tekst samt billede

--- a/portfolie.html
+++ b/portfolie.html
@@ -17,11 +17,12 @@
         <div class="Hvem">Hvem?
         </div>
             <img src="images/Anders+hund.jpg" alt="Anders(hoejre)" class="Anders">
-            <div>Anders Stensgård Beck (højre) er i øjeblikket igang med at forbedre sig selv da han er igang med hans uddannelse på Zealand ervhersakademi som multimediedesigner.
-                Anders er selvudnævnt kreativ og kan også godt lide den kreative process der indgår i udviklingen og implementeringen af en ide.
-                Der går ikke lang tid før Anders finder på nye koncepter og ideer der skal testes for der er altid et eller andet der skal laves eller optimeres.
-                Det kreative sind der til tider er absurd er det vigtigeste personlighedstræk som Anders besidder da det netop giver ham evnen til at komme på anderledes måder at løse problemer på.               
-                Anders er vant til ansvar da han allerede har prøvet at være i en position hvor han skal kunne holde overblik over en process samt holde moral oppe.
+            <div>Jeg hedder Anders Stensgaard Beck (til højre på billedet). I øjeblikket er jeg i gang med en uddannelse på Zealand Erhvervsakademi som multimediedesigner.
+                Jeg er iderig og kan godt lide den kreative proces, der indgår i udviklingen og implementeringen af en ide.
+                Der er altid et eller andet, der kan laves bedre, pænere eller optimeres, og jeg finder ofte på nye koncepter og ideer, der skal testes.
+                Ud over at have et kreativt sind, arbejder jeg målrettet med fokus på detaljen. Disse træk medvirker til, at jeg ofte finder på anderledes måder at løse problemer på.               
+                Jeg arbejder struktureret og har et godt overblik over processen fra start til slut og er vant til ansvar, da jeg allerede har prøvet at være i en position, hvor jeg skulle medvirke til at fastholde fokus og holde moral oppe i arbejdsgruppen.
+
             </div>
     </section>
 
