tilføjet lille tekstbox før "Hvad" sektion

--- a/portfolie.html
+++ b/portfolie.html
@@ -17,7 +17,7 @@
         <div class="Hvem">Hvem?
         </div>
             <img src="images/Anders+hund.jpg" alt="Anders(hoejre)" class="Anders">
-            <div>Jeg hedder Anders Stensgaard Beck (til højre på billedet). I øjeblikket er jeg i gang med en uddannelse på Zealand Erhvervsakademi som multimediedesigner.
+            <div>Jeg hedder Anders Stensgaard Beck (til højre på billedet). I øjeblikket er jeg i gang med en uddannelse på Zealand Erhvervsakademi som multimediedesigner, hvilket er meget nyt og spændende da jeg ikke tidiligere har haft nogen erfaringer inden for kodning.
                 Jeg er iderig og kan godt lide den kreative proces, der indgår i udviklingen og implementeringen af en ide.
                 Der er altid et eller andet, der kan laves bedre, pænere eller optimeres, og jeg finder ofte på nye koncepter og ideer, der skal testes.
                 Ud over at have et kreativt sind, arbejder jeg målrettet med fokus på detaljen. Disse træk medvirker til, at jeg ofte finder på anderledes måder at løse problemer på.               
@@ -27,22 +27,26 @@
     </section>
 
     <div class="Overskrifter">Hvad?
+        
     </div>
-
     <section class="tekstbox">
-        <a target="_blank" href="http://abeck.one/Nehmap/">
+        Under mit uddannelsesforløb på Zealand Erhvervsakademi har jeg været i gruppearbejde og lavet et par projekter der kan ses nedenunder bare klik på ikonet og se for dig selv.
+        arbejdet på disse projekter blev delt mellem gruppe medlemmer hvor vi hver selv skulle lave en side og fylde den med indhold. Linksne på ikonerne leder til den side jeg selv har lavet under gruppearbejdet.
+    </section>
+    <section class="tekstbox">
+        <a target="_blank" href="http://abeck.one/Nehmap/v%C3%A6rdiskabelse.html">
             <img src="images/NehmapIcon.png" alt="NehmapIcon" class="NehmapIcon">
         </a>
     </section>
 
     <section class="tekstbox">
-        <a target="_blank" href="http://abeck.one/Tangoterapi%232/">
+        <a target="_blank" href="http://abeck.one/Tangoterapi%232/events.html">
             <img src="images/TangoIcon.png" alt="TangoIcon" class="TangoIcon">
         </a>
     </section>
 
     <section class="tekstbox">
-        <a target="_blank" href="http://abeck.one/Roomba-Zumba/">
+        <a target="_blank" href="http://abeck.one/Roomba-Zumba/Anmeldelser.html">
             <img src="images/ZumbaIcon.png" alt="ZumbaIcon" class="ZumbaIcon">
         </a>
     </section>
